Fix table cell vertical alignment

--- a/assets/css/blocks/content-table.scss
+++ b/assets/css/blocks/content-table.scss
@@ -18,6 +18,7 @@
   }
 
   th, td {
+    vertical-align: top;
     padding: 14px $side-margin-s;
     min-width: 125px;
   }
